{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 156,
  "lineage": "440c614f-9890-5ac1-95d1-1ce5a3e25f84",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590331242805:loadbalancer/app/blockparty-env-alb/4feb8ba9e0d947ef",
            "arn_suffix": "app/blockparty-env-alb/4feb8ba9e0d947ef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "blockparty-env-alb-460195511.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:590331242805:loadbalancer/app/blockparty-env-alb/4feb8ba9e0d947ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blockparty-env-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a842a83464d9db82"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b4efdfde7b4ea0c"
              },
              {
                "subnet_id": "subnet-05f012b5c61d9d93e"
              },
              {
                "subnet_id": "subnet-08499e17b51e6a7e5"
              }
            ],
            "subnets": [
              "subnet-03b4efdfde7b4ea0c",
              "subnet-05f012b5c61d9d93e",
              "subnet-08499e17b51e6a7e5"
            ],
            "tags": {
              "Name": "blockparty-env-alb"
            },
            "tags_all": {
              "Name": "blockparty-env-alb"
            },
            "vpc_id": "vpc-0c79f2bee7d9770f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590331242805:listener/app/blockparty-env-alb/4feb8ba9e0d947ef/c1b7de0202213105",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590331242805:targetgroup/blockparty-env-tg/e0bfb59aa3389b64",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590331242805:listener/app/blockparty-env-alb/4feb8ba9e0d947ef/c1b7de0202213105",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:590331242805:loadbalancer/app/blockparty-env-alb/4feb8ba9e0d947ef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_target_group.this",
            "module.ecs.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590331242805:targetgroup/blockparty-env-tg/e0bfb59aa3389b64",
            "arn_suffix": "targetgroup/blockparty-env-tg/e0bfb59aa3389b64",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/metadata",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590331242805:targetgroup/blockparty-env-tg/e0bfb59aa3389b64",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blockparty-env-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "blockparty-env-tg"
            },
            "tags_all": {
              "Name": "blockparty-env-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:security-group/sg-0a842a83464d9db82",
            "description": "SG for the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a842a83464d9db82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "blockparty-env-alb-sg",
            "name_prefix": "",
            "owner_id": "590331242805",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:security-group/sg-0b70f4cea8c3f64b4",
            "description": "SG for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b70f4cea8c3f64b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a842a83464d9db82"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "blockparty-env-ecs-sg",
            "name_prefix": "",
            "owner_id": "590331242805",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:security-group/sg-0564de909bab2b6c6",
            "description": "SG for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0564de909bab2b6c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "blockparty-env-db-sg",
            "name_prefix": "",
            "owner_id": "590331242805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blockparty-env-db-sg"
            },
            "tags_all": {
              "Name": "blockparty-env-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8257ca6b09353f0",
            "arn": "arn:aws:ec2:us-east-1:590331242805:elastic-ip/eipalloc-0a8257ca6b09353f0",
            "domain": "vpc",
            "id": "eipalloc-0a8257ca6b09353f0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-21-151-194.compute-1.amazonaws.com",
            "public_ip": "52.21.151.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:internet-gateway/igw-00adc6e488323af79",
            "id": "igw-00adc6e488323af79",
            "owner_id": "590331242805",
            "tags": {
              "Name": "blockparty-env-igw"
            },
            "tags_all": {
              "Name": "blockparty-env-igw"
            },
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8257ca6b09353f0",
            "association_id": "eipassoc-051a3d7ff4e16bd89",
            "connectivity_type": "public",
            "id": "nat-0a26264865cd761cd",
            "network_interface_id": "eni-0882f7dd79b5a948c",
            "private_ip": "10.0.1.38",
            "public_ip": "52.21.151.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08499e17b51e6a7e5",
            "tags": {
              "Name": "blockparty-env-natgw"
            },
            "tags_all": {
              "Name": "blockparty-env-natgw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00adc6e488323af79",
            "id": "r-rtb-07c0de5bee65cf8111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c0de5bee65cf811",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c5c66f76defa33d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a26264865cd761cd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c5c66f76defa33d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:route-table/rtb-0c5c66f76defa33d8",
            "id": "rtb-0c5c66f76defa33d8",
            "owner_id": "590331242805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c69569bbd70c771",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blockparty-env-private-rt"
            },
            "tags_all": {
              "Name": "blockparty-env-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:route-table/rtb-07c0de5bee65cf811",
            "id": "rtb-07c0de5bee65cf811",
            "owner_id": "590331242805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00adc6e488323af79",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blockparty-env-public-rt"
            },
            "tags_all": {
              "Name": "blockparty-env-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0fbf70679d1b30d",
            "route_table_id": "rtb-0c5c66f76defa33d8",
            "subnet_id": "subnet-03943bba1ee3e9fe6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0020d1a3b3ecc4707",
            "route_table_id": "rtb-0c5c66f76defa33d8",
            "subnet_id": "subnet-0acf7f0a66af2f271"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079849b64b6d8e5c5",
            "route_table_id": "rtb-07c0de5bee65cf811",
            "subnet_id": "subnet-08499e17b51e6a7e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7530cb0e4e3cc63",
            "route_table_id": "rtb-07c0de5bee65cf811",
            "subnet_id": "subnet-03b4efdfde7b4ea0c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011332fb7fc41ba03",
            "route_table_id": "rtb-07c0de5bee65cf811",
            "subnet_id": "subnet-05f012b5c61d9d93e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:subnet/subnet-03943bba1ee3e9fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03943bba1ee3e9fe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590331242805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blockparty-env-private-subnet-0"
            },
            "tags_all": {
              "Name": "blockparty-env-private-subnet-0"
            },
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:subnet/subnet-0acf7f0a66af2f271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acf7f0a66af2f271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590331242805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blockparty-env-private-subnet-1"
            },
            "tags_all": {
              "Name": "blockparty-env-private-subnet-1"
            },
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:subnet/subnet-08499e17b51e6a7e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08499e17b51e6a7e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590331242805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blockparty-env-public-subnet-0"
            },
            "tags_all": {
              "Name": "blockparty-env-public-subnet-0"
            },
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:subnet/subnet-03b4efdfde7b4ea0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b4efdfde7b4ea0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590331242805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blockparty-env-public-subnet-1"
            },
            "tags_all": {
              "Name": "blockparty-env-public-subnet-1"
            },
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:subnet/subnet-05f012b5c61d9d93e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f012b5c61d9d93e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590331242805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blockparty-env-public-subnet-2"
            },
            "tags_all": {
              "Name": "blockparty-env-public-subnet-2"
            },
            "vpc_id": "vpc-0c79f2bee7d9770f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590331242805:vpc/vpc-0c79f2bee7d9770f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2ff5da5b9e05e4d",
            "default_route_table_id": "rtb-0347d82afed38c8be",
            "default_security_group_id": "sg-08b919bfb4532d726",
            "dhcp_options_id": "dopt-03a7be61",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c79f2bee7d9770f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0347d82afed38c8be",
            "owner_id": "590331242805",
            "tags": {
              "Name": "blockparty-env-vpc"
            },
            "tags_all": {
              "Name": "blockparty-env-vpc"
            }
          }
        }
      ]
    }
  ]
}